--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/Index.cshtml
@@ -58,40 +58,41 @@
                             <div class="card-datatable">
                                 <table class="datatables datatables-ajax table table-responsive table">
                                     <thead>
-                                        <tr>
-                                            <th>
-                                                @Html.DisplayNameFor(model => row.Id)
+                                    <tr>
+                                        <th>
+                                            @Html.DisplayNameFor(model => row.Id)
 
-                                                <a id="details" asp-action="Details">
+                                            <a id="details" asp-action="Details">
+                                            </a>
+
+                                            @if (accessLevel.CreateAccess)
+                                            {
+                                                <a id="create" asp-action="CreateOrEdit">
                                                 </a>
+                                            }
 
-                                                @if (accessLevel.CreateAccess)
-                                                {
-                                                    <a id="create" asp-action="CreateOrEdit">
-                                                    </a>
-                                                }
+                                            @if (accessLevel.EditAccess)
+                                            {
+                                                <a id="edit" asp-action="CreateOrEdit">
+                                                </a>
+                                            }
+                                            @if (accessLevel.DeleteAccess)
+                                            {
+                                                <a id="delete" asp-action="Delete">
+                                                </a>
+                                            }
 
-                                                @if (accessLevel.EditAccess)
-                                                {
-                                                    <a id="edit" asp-action="CreateOrEdit">
-                                                    </a>
-                                                }
-                                                @if (accessLevel.DeleteAccess)
-                                                {
-                                                    <a id="delete" asp-action="Delete">
-                                                    </a>
-                                                }
+                                        </th>
+                                        <th>@Html.DisplayNameFor(model => row.Name)</th>
+                                        <th>@Html.DisplayNameFor(model => row.MemberCount)</th>
+                                        <th>@Localizer.Get("UpdateGameResult")</th>
+                                        <th>@Html.DisplayNameFor(model => row.GameWeak)</th>
 
-                                            </th>
-                                            <th>@Html.DisplayNameFor(model => row.Name)</th>
-                                            <th>@Html.DisplayNameFor(model => row.MemberCount)</th>
-                                            <th>@Html.DisplayNameFor(model => row.GameWeak)</th>
-
-                                            <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => row.Id)
-                                            </th>
-                                        </tr>
+                                        <th>@Html.DisplayNameFor(model => row.CreatedAt)</th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => row.Id)
+                                        </th>
+                                    </tr>
                                     </thead>
                                 </table>
                             </div>
@@ -104,6 +105,9 @@
 
     </div>
 </div>
+
+<partial name="_PrivateLeagueModals" view-data="ViewData" />
+
 <!-- END: Content-->
 @section scripts{
     <script src="~/apis/charts.js"></script>
@@ -127,8 +131,13 @@
                     // Columns Setups
                     columns: [
                         { data: "id" },
-                        {data:"name"},
-                        {data:"memberCount"},
+                        { data:"name" },
+                        { data:"memberCount" },
+                        { data:"id", render: function(data) {
+                          return `<a class="btn btn-primary update_private_league_ranking" data-id="${data}">
+                                @Localizer.Get("UpdateGameResult")
+                            </a>`;
+                        } },
                         {
                             data: "gameWeak",
                             render: function (data) {
@@ -164,5 +173,32 @@
             LoadTable();
 
         });
+        
+        // start update_private_league_ranking
+        $(document).on("click", ".update_private_league_ranking", function(e) {
+          e.preventDefault();
+          
+          let fk_PrivateLeague = $(this).data("id");
+          
+          $("input[name=FK_PrivateLeague]").val(fk_PrivateLeague);
+          
+          $(".update_private_league_ranking_modal").modal('show');
+        });
+        
+        $(document).on("click", ".update_private_league_ranking_submit", function (e) {
+            let fk_GameWeak = $("select[name=Fk_GameWeak]").val();
+            
+            $.ajax({
+                url: '@Url.ActionLink("UpdatePrivateLeagueRanking", "Home", new {area = "Dashboard"})',
+                method: 'post',
+                data: {
+                  fk_GameWeak: fk_GameWeak,
+                },
+                success: function(data) {
+                  $("#success").modal('show');
+                }
+            }); 
+        });
+        // end update_private_league_ranking
     </script>
 }
