--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -92,6 +92,8 @@
 
                                 </div>
                                 <div class="card-body" style="overflow-x: auto">
+                                    <a class="btn btn-primary update_account_team_points">@Localizer.Get("UpdateGameTeamPoints")</a>
+                                    <hr>
                                     <div class="d-flex justify-content-between align-items-start">
                                         <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.AccountTeamGameWeaks)</span>
                                     </div>
@@ -271,6 +273,7 @@
     </div>
 </div>
 
+<partial name="_AccountTeamModals" view-data="ViewData" />
 
 @section scripts {
 
@@ -281,6 +284,27 @@
             $('.form-content').load(href);
             $("#Modal").modal("show");
         });
+        
+        // start update_account_team_points
+        $(document).on("click", ".update_account_team_points", function(e) {
+          e.preventDefault();
+          
+          $(".update_account_team_points_modal").modal('show');
+        });
+        
+        $(document).on("click", ".update_account_team_points_submit", function (e) {
+            $.ajax({
+                url: '@Url.ActionLink("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
+                method: 'post',
+                data: {
+                    fk_AccountTeamGameWeak: '@Model.Id'
+                },
+                success: function(data) {
+                  $("#success").modal('show');
+                }
+            }); 
+        });
+        // end update_account_team_points
     </script>
 
 }
