--- a/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/_PrivateLeagueModals.cshtml
+++ b/Dashboard/Areas/PrivateLeagueEntity/Views/PrivateLeague/_PrivateLeagueModals.cshtml
@@ -17,7 +17,7 @@
 
                         <div asp-validation-summary="All" class="text-danger">@ViewData["Error"]</div>
                         <div class="row mb-1">
-                            <input type="hidden" name="FK_PrivateLeague" value="0" />
+                            <input type="hidden" name="id" value="0" />
                         </div>
 
                         <div class="row">
